--- a/pom.xml
+++ b/pom.xml
@@ -214,6 +214,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot</artifactId>
+            <version>1.5.18.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <build>
