--- a/pom.xml
+++ b/pom.xml
@@ -219,6 +219,12 @@
             <artifactId>spring-boot</artifactId>
             <version>1.5.18.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot</artifactId>
+            <version>1.3.8.RELEASE</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
